--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
   "bugs": {
     "url": "https://github.com/link89/proxy-chain-cli/issues"
   },
-  "homepage": "https://github.com/link89/proxy-chain-cli#readme"
+  "homepage": "https://github.com/link89/proxy-chain-cli#readme",
+  "devDependencies": {
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
+  }
 }
