--- a/package.json
+++ b/package.json
@@ -2,8 +2,17 @@
   "name": "proxy-chain-cli",
   "version": "0.0.1",
   "description": "Command line interface of proxy-chain",
-  "main": "index.js",
+  "main": "dist/main.js",
+  "files": [
+    "bin",
+    "dist"
+  ],
+  "bin": {
+    "proxy-chain-cli": "./bin/cli"
+  },
   "scripts": {
+    "prepack": "git clean -xdf -e node_modules && tsc",
+    "start": "ts-node src/main.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,7 +29,12 @@
   },
   "homepage": "https://github.com/link89/proxy-chain-cli#readme",
   "devDependencies": {
+    "@types/yargs": "^17.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "proxy-chain": "^2.2.1",
+    "yargs": "^17.7.1"
   }
 }
